--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -32,18 +32,20 @@ Plugin_Runtime_ClipToNotebook_Default=default
 
 Plugin_OutOfDate=Current version {0} of Eemory is no longer supported by Evernote. Please upgrade to the latest version.
 
-Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote: An authentication page will be opened in external default browser, which may take several minutes, and you need to go there to authorize Eemory. Would you like to connect now?
+Plugin_OAuth_TokenNotConfigured=Connect Eemory to {0}: An authentication page will be opened in external default browser, which may take several minutes, and you need to go there to authorize Eemory. Would you like to connect now?
 Plugin_OAuth_Title=Authorization
 Plugin_OAuth_Configure=Connect
 Plugin_OAuth_NotNow=Not Now
 Plugin_OAuth_Waiting=Waiting authorization to complete...
 Plugin_OAuth_Confirm=Continue with the pending operation?
-Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. The pending operation will continue after re-authorization. Would you like to re-authorize now?
+Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access {0} account. Please re-authorize Eemory. The pending operation will continue after re-authorization. Would you like to re-authorize now?
 Plugin_OAuth_AuthExpired_Title=Authorization Expired
 Plugin_OAuth_AuthExpired_ReAuth=Re-authorize
 Plugin_OAuth_DoItManually=Could not open a web browser. Click on the 'Copy Authorization URL' button below to copy the authorization URL and open it in web browser manually, and then authorize Eemory.
 Plugin_OAuth_Cancel=Cancel
 Plugin_OAuth_Copy=Copy Authorization URL
+Plugin_OAuth_SWITCH_YXBJ=\u5207\u6362\u5230{0}
+Plugin_OAuth_SWITCH_INTL=\u5207\u6362\u5230 {0}
 
 Plugin_Error_Occurred=Error Occurred
 Plugin_Error_OutOfDate=Evernote SDK is out of date
