fixed bug #87: 4K Displayer Verified: Display goes wrong for Button [切换到 Evernote International].

--- a/org.lttpp.eemory/src/messages.properties
+++ b/org.lttpp.eemory/src/messages.properties
@@ -45,7 +45,7 @@ Plugin_OAuth_DoItManually=Could not open a web browser. Click on the 'Copy Autho
 Plugin_OAuth_Cancel=Cancel
 Plugin_OAuth_Copy=Copy Authorization URL
 Plugin_OAuth_SWITCH_YXBJ=\u5207\u6362\u5230{0}
-Plugin_OAuth_SWITCH_INTL=\u5207\u6362\u5230 {0}
+Plugin_OAuth_SWITCH_INTL=Go to {0}
 
 Plugin_Error_Occurred=Error Occurred
 Plugin_Error_OutOfDate=Evernote SDK is out of date
